# passio

./: .gitignore  README.md  biome.json  package.json  tsconfig.base.json
.github/: description.md
.github/releases/: v2.3.md
.github/workflows/: docs.yml  release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/home/.vault/Main/: Todo.md
apps/desktop/src-tauri/resources/: passio-seed.xml
apps/desktop/src-tauri/scripts/: install-mime.sh
apps/desktop/src-tauri/src/: clipboard_history.rs  commands.rs  gate.rs  hotkeys.rs  keychain.rs  lib.rs  logs.rs  main.rs  paths.rs  scheduler.rs  selection.rs  sidecar.rs
apps/docs/: next.config.mjs  package.json  tailwind.config.ts
apps/extension/: build.ts  package.json  tsconfig.json
apps/mobile/: index.html  package.json  vite.config.ts
docs/: README.md  architecture.md  auto-loop.md  extension.md  getting-started.md  hotkeys.md  mobile.md  obsidian.md  privacy.md  settings.md  spotlight.md  troubleshooting.md  user-guide.md
docs/seeds/: README.md  api.md  catalog.md  dev-mode.md  install.md  manifest.md  orchard.md  panels.md  permissions.md  publishing.md  quickstart.md  selling-seeds.md
orchard/: index.json
scripts/: add-paid-to-orchard.ts  build.ts  dev.ts  gen-seeds.spec.ts  gen-seeds.ts  push.sh
seeds/air-quality/: index.js  panel.js  seed.json
seeds/airtable-query/: index.js  seed.json
seeds/api-latency-watch/: index.js  (+2 more)
(+434 files in other folders)
